[project]
name = "genai-post-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.9",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.1.7",
    "pandas>=2.3.3",
    "streamlit>=1.54.0",
]
